<resources>
    <string name="app_name">br.com.mobile.imovelparatodos</string>
    <!-- strings.xml -->
    <string name="imobiliaria">Imobiliária</string>
    <string name="imoveispar">Imóveis para todos</string>
    <string name="milharesde">Milhares de imóveis em \num simples click!</string>
    <string name="acessar_min">Acessar minha conta</string>
    <string name="esqueci_min">Esqueci minha senha</string>
    <string name="utilize_seu">Utilize seu e-mail e sua senha para ter acesso ao aplicativo</string>
    <string name="login">Login</string>
    <string name="title_activity_home_test">HomeTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nome_usuario">Olá, Usuário Exemplo!</string>
    <string name="email_usuario">exemplo@gmail.com.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_dados_pessoais">Dados pessoais</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="realizar_pr">Realizar proposta de um imóvel</string>
    <string name="realizar_pr_txt">Agora você irá realizar uma proposta, que te deixará mais perto de conseguir o imóvel. O locatário tem o prazo de até 72 horas para responde à proposta.</string>
    <string name="agendar_pr_txt">Ao agendar uma visita, o corretor mais próximo será notificado e entrará em contato com você para confirmar a data e o horário de visita.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
